--- a/static/css/formtemplates.css
+++ b/static/css/formtemplates.css
@@ -19,3 +19,26 @@ h2 {
 p {
     color: #666;
 }
+
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .card {
+    width: 25%; /* Adjust the width as needed */
+    margin: 10px;
+  }
+
+  /* Additional styling for card appearance */
+  .card {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .card:hover {
+    transform: scale(1.05);
+  }
